[gd_scene load_steps=6 format=3 uid="uid://c88i10i6pfkxs"]

[ext_resource type="Script" path="res://scenes/levels/test_base_level/base_level.gd" id="1_ljp63"]
[ext_resource type="Script" path="res://scripts/systems/basic_spawner.gd" id="2_06y4u"]
[ext_resource type="Script" path="res://scripts/systems/parallax_scroller.gd" id="2_lknes"]
[ext_resource type="Texture2D" uid="uid://cy4oq4jdjc62v" path="res://assets/images/temp/main.png" id="3_0133k"]
[ext_resource type="PackedScene" uid="uid://yl6w74en5kkn" path="res://scenes/objects/blast_doors/blast_doors.tscn" id="3_xciec"]

[node name="BaseLevel" type="Node2D"]
process_mode = 1
script = ExtResource("1_ljp63")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
visible = false
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0747259, 0.205922, 0.304688, 1)

[node name="MainButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -15.5
offset_right = 70.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Go to Main Menu
"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 0.436
anchor_right = 0.56
anchor_bottom = 0.436
offset_left = -17.2
offset_top = 2.11996
offset_right = -9.19995
offset_bottom = 10.12
grow_horizontal = 2
grow_vertical = 2
text = "Show Settings Menu"

[node name="view" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="view"]
scroll_offset = Vector2(3.75, 0)
script = ExtResource("2_lknes")

[node name="ParallaxLayer" type="ParallaxLayer" parent="view/ParallaxBackground"]
motion_offset = Vector2(100, 0)
motion_mirroring = Vector2(4608, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="view/ParallaxBackground/ParallaxLayer"]
position = Vector2(2304, 540)
scale = Vector2(4, 4)
texture = ExtResource("3_0133k")

[node name="BlastDoorSpawner" type="Node2D" parent="view"]
position = Vector2(2004, 540)
script = ExtResource("2_06y4u")
_object = ExtResource("3_xciec")

[node name="TestTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="pressed" from="CanvasLayer/Control/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="timeout" from="TestTimer" to="." method="_on_test_timer_timeout"]
